<resources>
    <string name="app_name">Rain Kist</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="if_location_permission_dined">Ops! We can\'t get you current location because you dined GPS permission Click OK if you want to select you location automatically, Skip for manually selection</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_fav">Favorites</string>
    <string name="today">Today</string>
    <string name="full_report">Full report</string>
    <string name="add_location">Add location</string>
    <string name="week_report_lable">Forecast report</string>
    <string name="next_forecast">Next forecast</string>
    <string name="degree_symble" translatable="false">°</string>
    <string name="feels_like">Feels like</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pref_name" translatable="false">AppPref</string>
    <string name="is_kelvin" translatable="false">isKelvin</string>
    <string name="wind_speed_unit" translatable="false">isM/s</string>
    <string name="home_image_desc" translatable="false">MainImage</string>
    <string name="click_on_the_image_to_select_your_location">Click on the image to select your location</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="temperature">Temperature</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="wind_speed">Wind speed</string>
    <string name="meter_second">Meter / Second</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="add_favorite_location">Add favorite location</string>
    <string name="alarm">Alarm</string>
    <string name="fav_empty_title">Favorite list is empty  press on + button to add a favprite place</string>
    <string name="this_button_will_delete_the_view">This button will delete the view</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="premission_dined">Permission denied, click OK to request permission</string>
    <string name="ok">OK</string>
    <string name="alert_list_is_empty_press_on_to_add_an_alert">Alert list is empty press on + to add an alert</string>
    <string name="tap_here_to_add_start_date">Tap here to add start date</string>
    <string name="tap_here_to_add_end_date">Tap here to add end date</string>
    <string name="delete_alert">Delete alert</string>
    <string name="delte">Delete</string>
    <string name="fav_delete_body">Are you sure you want to delete the place ?</string>
    <string name="delete_alert_body">Are you sure you want to delete this Alert ?</string>
    <string name="next_48hr">Next 48hr</string>
    <string name="ad_al">Add Alert</string>
    <string name="thereisnoaerts">Theres not alerts for today</string>
    <string name="weather_is">"The weather is "</string>
    <string name="retry">Retry</string>
    <string name="channel_name">Weather Alert</string>
    <string name="channel_description">check the application there\'s a weather alert</string>
</resources>