<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weatherapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_selectLocationFragment"
            app:destination="@id/selectLocationFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.weatherapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_fav"
        android:name="com.example.weatherapp.ui.fav.FavFragment"
        android:label="@string/menu_fav"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/selectLocationFragment"
        android:name="com.example.weatherapp.ui.selectlocation.SelectLocationFragment"
        android:label="@string/add_location"
        tools:layout="@layout/fragment_select_location" />
</navigation>