<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.settings.view.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/newClr"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/recyclerNewClr"
                app:cardCornerRadius="9dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/language"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>


            <RadioGroup
                android:id="@+id/radioLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/langEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:text="@string/english"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/langArabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/arabic"
                    android:textColor="@color/white" />


            </RadioGroup>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/recyclerNewClr"
                app:cardCornerRadius="9dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/temperature"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

            <RadioGroup
                android:id="@+id/radioTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/tempKelvin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:text="@string/kelvin"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/tempFahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/fahrenheit"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/tempCelsius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/celsius"
                    android:textColor="@color/white" />
            </RadioGroup>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/recyclerNewClr"
                app:cardCornerRadius="9dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>


            <RadioGroup
                android:id="@+id/radioLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/gps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:text="@string/gps"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/map"
                    android:textColor="@color/white" />


            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/recyclerNewClr"
                app:cardCornerRadius="9dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/wind_speed"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>


            <RadioGroup
                android:id="@+id/radioWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/mByS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:text="@string/meter_second"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/mByH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/mile_hour"
                    android:textColor="@color/white" />


            </RadioGroup>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/recyclerNewClr"
                app:cardCornerRadius="9dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>


            <RadioGroup
                android:id="@+id/radioNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/enabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:text="@string/enabled"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/disabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/disabled"
                    android:textColor="@color/white" />

            </RadioGroup>

        </LinearLayout>


    </LinearLayout>
</layout>